Añadidos metodos Post, Put y Delete en api/ documentation
